2001-12-01  Masatake YAMATO  <yamato@redhat.com>

	* README.MING: Write about Visual C++ and libming.*.

	* Makefile.am (EXTRA_DIST): added libming.*.
	
2001-12-01  Martin Weber <martweb@gmx.net>

	* input-magick.c: Fixed comments.

	* input.c: input_shortlist now supports ImageMagick formats.

	* output-pdf.c: no more a temporary file needed.

	(Message-ID: <3C07E7CB.42BB90D4@gmx.net>).

2001-12-01  Martin Weber <martweb@gmx.net>
	
	* input.c, input.h, main.c, README: input_list now also lists
	all formats that are supported by ImageMagick, dynamic generation of
	input format list.

	(Message-ID: <3C0697FA.F9F1F974@gmx.net> is applied.
	Message-ID: <3C056389.A35DF08C@gmx.net> is ignored).
	
2001-12-01  Martin Weber <martweb@gmx.net>

	* output-dxf.h (output_dxf12_writer): New function.

	* output.c (output_formats): Added dxf12.

	* output-dxf.c: Reorganized.

	(Message-ID: <3C053FF6.191A5F26@gmx.net>).

2001-12-01  Martin Weber <martweb@gmx.net>

	* output-swf.c (output_swf_writer): Now using file instead of 
	name so that it works also to stdout.

	(Message-ID: <3C02BF23.9D19CCC0@gmx.net>).
	
2001-12-01  Martin Weber <martweb@gmx.net>

	* Makefile.am (EXTRA_DIST): Added shape_cubic.c.diff README.MING.

	* shape_cubic.c.diff: Patch for ming.

	* README.MING: About shape_cubic.c.diff.
	
	(Message-ID: <3C02B6A9.D9EF762D@gmx.net>, Message-ID: <5962.1006945825@www21.gmx.net>)

2001-11-27  Martin Weber <martweb@gmx.net>

	* output-swf.c (output_swf_writer): Now using file instead of name 
	so that it works also to stdout.
	(Message-ID: <3C02BF23.9D19CCC0@gmx.net>).
	
2001-11-27  Martin Weber <martweb@gmx.net>

	* output-swf.c (output_swf_writer, out_splines): 
	Removed some warnings.
	(Message-ID: <3C02B6A9.D9EF762D@gmx.net>).


2001-11-28 Ian MacPhedran <Ian_MacPhedran@engr.USask.CA>

	* output-fig.c: centerlines were extended to complete polygons,
	  closing shapes which should be open - thanks to Dan Mills
          for pointing this out (routine out_fig_splines)
